[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jibrilcon"
version = "0.1.0"
description = "Static risk scanner for container configurations in embedded Linux rootfs images"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
jibrilcon = "jibrilcon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jibrilcon = ["rules/*.json", "rules/*.md", "config/*.json", "config/*.md"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
