[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jibrilcon"
dynamic = ["version"]
description = "Static risk scanner for container configurations in embedded Linux rootfs images"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "IanYHChu"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Security",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/IanYHChu/jibrilcon"

[project.scripts]
jibrilcon = "jibrilcon.cli:main"

[tool.setuptools.dynamic]
version = {attr = "jibrilcon.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jibrilcon = ["rules/*.json", "rules/*.md", "config/*.json", "config/*.md"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["jibrilcon"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

# Per-module overrides for files with existing type errors.
# These should be tightened over time as the codebase gains type annotations.
[[tool.mypy.overrides]]
module = [
    "jibrilcon.util.rules_engine",
    "jibrilcon.util.scanner_loader",
    "jibrilcon.util.path_utils",
    "jibrilcon.init_manager_finder",
    "jibrilcon.scanners.lxc",
    "jibrilcon.scanners.podman",
    "jibrilcon.cli",
]
disable_error_code = ["arg-type", "call-arg", "dict-item", "attr-defined"]

[tool.ruff]
target-version = "py310"
